fixed up foundation for html

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Quiz</title>
+    <title>Coding Quiz</title>
+
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
-    <div class="scores"></div>
-    <div class="timer"></div>
+    <div class="scores"><a href="highscores.html">View Highscores</a></div>
+    <div class="timer">Time: <span id="time">0</span></div>
+
     <div class="wrapper">
         <div id="start-screen" class="start">
-           <h1>Coding Quiz Challenge</h1>
-            <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <h1>Coding Quiz Challenge</h1>
+            <p>
+                Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scores/time by ten seconds!
+            </p>
             <button id="start">Start Quiz</button>
-           <h2 id="countdown"></h2>
-           <p id="main"></p>
-        </div>
+            </div>
+    
         <div id="questions" class="hide"></div>
         <div id="end-screen" class="hide"></div>
         <div id="feedback" class="feedback-hide"></div>
