--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
             <button id="start">Start Quiz</button>
             </div>
     
-        <div id="questions" class="hide"></div>
-        <div id="end-screen" class="hide"></div>
+        <div id="questions" class="hide">
+            <h2 id="question-title"></h2>
+            <div id="choices" class="choices"></div>
+            </div>
+
+        </div>
+        <div id="end-screen" class="hide">
+            <h2>All done!</h2>
+            <p>Your final score is <span id="final-score"></span>.</p>
+            <p>
+                Enter initials: <input type="text" id="initials" max="3" />
+                <button id="submit">Submit</button>
+            </p>
+        </div>
+
         <div id="feedback" class="feedback-hide"></div>
     </div>
-    <script src="./script.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 </html>
