--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+    <header>
+        <nav>
+     <div class="scores"><a href="highscores.html">View Highscores</a></div>
+    <div class="timer">Time: <span id="time">0</span></div>
+        </nav>
+    </header>
 
 <body>
-    <div class="scores"><a href="highscores.html">View Highscores</a></div>
-    <div class="timer">Time: <span id="time">0</span></div>
+    
 
     <div class="wrapper">
         <div id="start-screen" class="start">
