fixing up timer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
      <div class="scores"><a href="highscores.html">View Highscores</a></div>
-    <div class="timer">Time: <span id="time">0</span></div>
+    <div class="time">Time: 0 <span id="timer"></span></div>
         </nav>
     </header>
 
@@ -41,8 +41,9 @@
         </div>
 
         <div id="feedback" class="feedback-hide"></div>
+        
     </div>
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/logic.js"></script>
+    <script src="assets/js/questions.js"></script>
 </body>
 </html>
