added event listener for startbtn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
      <div class="scores"><a href="highscores.html">View Highscores</a></div>
-    <div class="time">Time: 0 <span id="timer"></span></div>
+    <div class="time"><span id="timer">Time: 0</span></div>
         </nav>
     </header>
 
