fixed go back button

--- a/highscores.html
+++ b/highscores.html
@@ -18,7 +18,7 @@
         <div class="wrapper">
             <div id="highscores" class="scores">
                 <h1>Highscores</h1>
-                <button id="goback" class="bond">Go back</button>
+                <button id="goback" class="bond"><a href="index.html">Go back</a></button>
                 <button id="clearhighscores" class="bond">Clear highscores</button>
 
             </div>
