--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="start-screen" class="start">
             <h1>Coding Quiz Challenge</h1>
             <p>
-                Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scores/time by ten seconds!
+                Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scores/time by five seconds!
             </p>
             <button id="start">Start Quiz</button>
             </div>
