--- a/highscores.html
+++ b/highscores.html
@@ -16,16 +16,16 @@
 
 <body>
         <div class="wrapper">
-            <div id="highscores" class="scores">
+            <div id="view-highscores-page" class="scores">
                 <h1>Highscores</h1>
-                <button id="goback" class="bond"><a href="index.html">Go back</a></button>
-                <button id="clearhighscores" class="bond">Clear highscores</button>
+                <button id="go-back" class="bond"><a href="index.html">Go back</a></button>
+                <button id="clear-highscores" class="bond">Clear highscores</button>
 
             </div>
         </div>
 
-        <script src="/assets/js/logic.js"></script>
         <script src="/assets/js/questions.js"></script>
+        <script src="/assets/js/logic.js"></script>
 
 </body>
 </html>
