--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
+        <!--Nav Bar, highscores/Time-->
     <header>
         <nav>
      <div class="scores"><a href="highscores.html">View Highscores</a></div>
@@ -16,6 +18,8 @@
     </header>
 
 <body>
+    <!--Opening Page-->
+    <section id="opening-page">
     <div class="wrapper">
         <div id="start-screen" class="start">
             <h1>Coding Quiz Challenge</h1>
@@ -24,26 +28,37 @@
             </p>
             <button id="start">Start Quiz</button>
             </div>
+        </section>
     
-        <div id="questions" class="hide">
+        <!--Questions Page-->
+        <section class="hide" id="questions-page">
+            <div class="wrapper">
+        <div id="questions" class="hide"></div>
+        <div id="question"></div>
             <h2 id="question-title"></h2>
-            <div id="choices" class="choices"></div>
+            <div id="choices" class="choices1"></div>
+            <button class ="hide" id="continue">Continue</button>
             </div>
+            </section>
 
-        </div>
+        <!--Submit Highscores Page-->
+        <section class="hide" id="submit-highscores-page">
+            <div class="wrapper">
         <div id="end-screen" class="hide">
             <h2>All done!</h2>
-            <p>Your final score is: <span id="final-score"></span>.</p>
+            <p>Your final score is: <span id="finalscore">0</span></p>
             <p>
-                Enter initials: <input type="text" id="initials" max="3" />
+                Enter initials: <input type="text" id="inputInitials" max="3" />
                 <button id="submit">Submit</button>
             </p>
         </div>
+        </div>
+        </section>
 
         <div id="feedback" class="feedback-hide"></div>
-        
     </div>
-    <script src="assets/js/logic.js"></script>
+
     <script src="assets/js/questions.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 </html>
