--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p>
                 Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scores/time by five seconds!
             </p>
+            <h2 id="countdown"></h2>
             <button id="start">Start Quiz</button>
             </div>
         </section>
