--- a/index.html
+++ b/index.html
@@ -33,27 +33,21 @@
     
         <!--Questions Page-->
         <section class="hide" id="questions-page">
-            <div class="wrapper">
-        <div id="questions" class="hide"></div>
-        <div id="question"></div>
+        <div id="question">
             <h2 id="question-title"></h2>
             <div id="choices" class="choices1"></div>
             <button class ="hide" id="continue">Continue</button>
-            </div>
-            </section>
+        </div>
+         </section>
 
         <!--Submit Highscores Page-->
         <section class="hide" id="submit-highscores-page">
-            <div class="wrapper">
-        <div id="end-screen" class="hide">
             <h2>All done!</h2>
             <p>Your final score is: <span id="finalscore">0</span></p>
             <p>
                 Enter initials: <input type="text" id="inputInitials" max="3" />
                 <button id="submit">Submit</button>
             </p>
-        </div>
-        </div>
         </section>
 
         <div id="feedback" class="feedback-hide"></div>
