--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <section class="hide" id="questions-page">
         <div id="question">
             <h2 id="question-title"></h2>
-            <div id="choices" class="choices1"></div>
-            <button class ="hide" id="continue">Continue</button>
+            
         </div>
          </section>
 
@@ -49,8 +48,11 @@
                 <button id="submit">Submit</button>
             </p>
         </section>
+        <button id="continue">Continue</button>
 
         <div id="feedback" class="feedback-hide"></div>
+        <div id="choices" class="choices1"></div>
+
     </div>
 
     <script src="assets/js/questions.js"></script>
